# invoiceflow

./: .env.example  .venv  ANALYSIS.md  BENCHMARKS.md  CONTRIBUTING.md  CORE_FEATURE.md  Dockerfile  ENTERPRISE_REVIEW.md  PLAN.md  README.md  SECURITY.md  VALIDATION.md  alembic.ini  docker-compose.yml  pyproject.toml  sbom.json
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
docs/: deployment.md  use-cases.md
src/invoiceflow/: __init__.py  app.py  cli.py  config.py  database.py  models.py  schemas.py
src/invoiceflow/engine/: __init__.py  categorizer.py  duplicates.py  email_ingestor.py  exporter.py  extractor.py  ingestor.py  pipeline.py  validator.py
src/invoiceflow/routes/: invoices.py  purchase_orders.py
tests/: conftest.py  test_app.py  test_cli.py  test_e2e.py  test_email_ingestor.py  test_engine.py  test_extractor_extra.py  test_feature_validation.py  test_integration.py  test_pipeline.py  test_routes_extra.py
