[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoiceflow"
version = "0.1.0"
description = "AI invoice processing pipeline. Ingests invoices (PDF, email, image) via watch folder or API, uses LLM (Ollama) to extract vendor, line items, amounts, dates, PO numbers. Validates against purchase orders, flags discrepancies, categorizes expenses, exports to CSV/QuickBooks format. Duplicate detection via fuzzy matching. Approval workflow with webhook notifications. REST API + CLI. FastAPI + SQLite."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",
    "pypdf>=4.0",
    "rapidfuzz>=3.6",
    "python-multipart>=0.0.9",
    "watchdog>=4.0",
]

[project.scripts]
invoiceflow = "invoiceflow.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "httpx", "ruff", "mypy", "bandit"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
